--- a/pieces/library.bib
+++ b/pieces/library.bib
@@ -1,9 +1,9 @@
-%% Created using Papers on Tue, 22 May 2012.
+%% Created using Papers on Sun, 27 May 2012.
 %% http://mekentosj.com/papers/
 
 @article{Richardson:1997ea,
 author = {Richardson, Sylvia and Green, Peter J.},
-title = {{On Bayesian analysis of mixtures with an unknown number of components (with discussion)}},
+title = {{On Bayesian analysis of mixtures with an unknown number of components}},
 journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
 year = {1997}
 }
@@ -57,6 +57,13 @@ journal = {Proceedings of the 4th International Symposium on Imange and Signal P
 year = {2005}
 }
 
+@incollection{Akaike:1977ul,
+author = {Akaike, Hirotugu},
+title = {{On entropy maximization principle}},
+booktitle = {Application of Statistics},
+year = {1977}
+}
+
 @article{Fearnhead:2004gi,
 author = {Fearnhead, Paul},
 title = {{Particle filters for mixture models with an unknown number of components}},
@@ -86,7 +93,7 @@ year = {2009}
 }
 
 @inproceedings{Bolic:2003hl,
-author = {Bolic, Miodrag and Djuric, Petar M. and Hong, Sangjin},
+author = {Boli{\'c}, Miodrag and Djuri{\'c}, Petar M. and Hong, Sangjin},
 title = {{New resampling algorithms for particel filters}},
 booktitle = {International Conference on Acoustics, Speech and Signal Processing (ICASSP'03)},
 year = {2003}
@@ -135,7 +142,7 @@ year = {1978}
 
 @article{Ridgeway:2003gq,
 author = {Ridgeway, Greg and Madigan, David},
-title = {{A sequential Monte Carlo method for Bayesian analysis of massive datasets.}},
+title = {{A sequential Monte Carlo method for Bayesian analysis of massive datasets}},
 journal = {Data Mining and Knowledge Discovery},
 year = {2003}
 }
@@ -178,7 +185,6 @@ year = {2004}
 @phdthesis{Hastie:2005vi,
 author = {Hastie, David},
 title = {{Towards automatic reversible jump Markov chain Monte Carlo}},
-school = {Citeseer},
 year = {2005}
 }
 
@@ -264,6 +270,10 @@ author = {Samiuddin, M. and El-Sayyad, G. M.},
 title = {{On nonparametric kernel density estimates}},
 journal = {Biometrika},
 year = {1990}
+}
+
+@booklet{Jeffreys:1961ua,
+title = {{Theory of Probability}}
 }
 
 @article{Jones:1993cn,
@@ -378,7 +388,7 @@ year = {1994}
 }
 
 @article{Sisson:2007il,
-author = {Sisson, S a and Fan, Y and Tanaka, Mark M},
+author = {Sisson, S a and Fan, Y. and Tanaka, Mark M},
 title = {{Sequential Monte Carlo without likelihoods}},
 journal = {Proceedings of the National Academy of Sciences of the United States of America},
 year = {2007}
@@ -410,6 +420,13 @@ author = {Johansen, Adam M. and Del Moral, Pierre and Doucet, Arnaud},
 title = {{Sequential Monte Carlo samplers for rare events}},
 journal = {Proceedings of the 6th International Workshop on Rare Event Simulation},
 year = {2006}
+}
+
+@article{Berger:1987iq,
+author = {Berger, James O. and Delampady, Mohan},
+title = {{Testing precise hypotheses}},
+journal = {Statistical Science},
+year = {1987}
 }
 
 @techreport{Doucet:2009us,
@@ -558,11 +575,11 @@ journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
 year = {2006}
 }
 
-@article{Sacks:1981vv,
-author = {Sacks, Jermoe and Ylvisaker, Donald},
-title = {{Asymptotically optimum kernels for density estimation at a point}},
-journal = {The Annals of Statistics},
-year = {1981}
+@book{Bernardo:2000vd,
+author = {Bernardo, Jos{\'e} M. and Smith, Adrian F. M.},
+title = {{Bayesian Theory}},
+publisher = {John Wiley {\&} Sons, Inc.},
+year = {2000}
 }
 
 @book{Tsybakov:2009wp,
@@ -572,18 +589,18 @@ publisher = {Springer},
 year = {2009}
 }
 
+@article{Sacks:1981vv,
+author = {Sacks, Jermoe and Ylvisaker, Donald},
+title = {{Asymptotically optimum kernels for density estimation at a point}},
+journal = {The Annals of Statistics},
+year = {1981}
+}
+
 @article{Nelder:1965in,
 author = {Nelder, J. A. and Mead, R.},
 title = {{A simplex method for function minimization}},
 journal = {The Computer Journal},
 year = {1965}
-}
-
-@inproceedings{Yu:2010km,
-author = {Yu, Jinxia and Liu, Wenjing and Tang, Yongli},
-title = {{Improved particle filter algorithms based on partial systematic resampling}},
-booktitle = {2010 IEEE International Conference on Intelligent Computing and Intelligent Systems (ICIS 2010)},
-year = {2010}
 }
 
 @article{Lugannani:1980tc,
@@ -593,6 +610,13 @@ journal = {Advances in Applied Probability},
 year = {1980}
 }
 
+@inproceedings{Yu:2010km,
+author = {Yu, Jinxia and Liu, Wenjing and Tang, Yongli},
+title = {{Improved particle filter algorithms based on partial systematic resampling}},
+booktitle = {2010 IEEE International Conference on Intelligent Computing and Intelligent Systems (ICIS 2010)},
+year = {2010}
+}
+
 @phdthesis{Wickham:G4KrC0Vz,
 author = {Wickham, Hadley Alexander},
 title = {{Practical tools for exploring data and models}}
@@ -600,7 +624,7 @@ title = {{Practical tools for exploring data and models}}
 
 @article{Brooks:2003ko,
 author = {Brooks, S. P. and Giudici, P. and Roberts, Gareth O.},
-title = {{Efficient construction of reversible jump Markov chain Monte Carlo proposal distributions (with discussion)}},
+title = {{Efficient construction of reversible jump Markov chain Monte Carlo proposal distributions}},
 journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
 year = {2003}
 }
@@ -633,7 +657,7 @@ year = {2011}
 }
 
 @article{Doucet:2006ji,
-author = {Doucet, Arnaud and Briers, Mark and S e n e cal, St\'{e}phane},
+author = {Doucet, Arnaud and Briers, Mark and S{\'e}n{\'e}cal, St{\'e}phane},
 title = {{Efficient block sampling strategies for sequential Monte Carlo methods}},
 journal = {Journal of Computational and Graphical Statistics},
 year = {2006}
@@ -732,12 +756,13 @@ year = {2001}
 
 @article{Raftery:2006ty,
 author = {Raftery, Adrian E. and Newton, Michael A. and Satagopan, Jaya M. and Krivisky, Pavel N.},
-title = {{Estimating the integrated likelihood via posterior simulaiton using the harmonic mean identity (with discussions)}},
+title = {{Estimating the integrated likelihood via posterior simulaiton using the harmonic mean identity}},
+journal = {Bayesian Statistics},
 year = {2006}
 }
 
 @article{DeanFang:2012gj,
-author = {Dean Fang, Yu-Hua and El Fakhri, Georges and Becker, John A and Alpert, Nathaniel M.},
+author = {Dean Fang, Yu-Hua and El Fakhri, Georges and Becker, John A. and Alpert, Nathaniel M.},
 title = {{Parametric imaging with Bayesian priors: A validation study with 11C-Altropane PET}},
 journal = {NeuroImage},
 year = {2012}
@@ -751,7 +776,7 @@ year = {2011}
 }
 
 @article{Atchade:2010ha,
-author = {Atchad{\'e}, Yves F and Roberts, Gareth O. and Rosenthal, Jeffrey S},
+author = {Atchad{\'e}, Yves F. and Roberts, Gareth O. and Rosenthal, Jeffrey S},
 title = {{Towards optimal scaling of Metropolis-coupled Markov chain Monte Carlo}},
 journal = {Statistics and Computing},
 year = {2010}
@@ -822,7 +847,7 @@ year = {2011}
 @book{Lehmann:2005vy,
 author = {Lehmann, E. L. and Romano, Joseph P.},
 title = {{Testing Statistical Hypotheses}},
-publisher = {Springer Verlag},
+publisher = {Springer-Verlag},
 year = {2005}
 }
 
@@ -850,6 +875,7 @@ year = {1996}
 @article{Berger:1992wo,
 author = {Berger, James O. and Bernardo, Jos{\'e} M.},
 title = {{On the development of reference priors}},
+journal = {Bayesian Statistics},
 year = {1992}
 }
 
@@ -916,6 +942,13 @@ journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
 year = {1979}
 }
 
+@book{Robert:2004tn,
+author = {Robert, Christian P. and Casella, George},
+title = {{Monte Carlo Statistical Methods}},
+publisher = {Springer},
+year = {2004}
+}
+
 @article{Wood:1993ku,
 author = {Wood, Andrew T.A. and Booth, James G. and Butler, Ronald W.},
 title = {{Saddlepoint approximations to the CDF of some statistics with nonnormal limit distributions}},
@@ -949,6 +982,20 @@ author = {Mengersen, K. L. and Tweedie, R. L.},
 title = {{Rates of convergence of the Hastings and Metropolis algorithms}},
 journal = {The Annals of Statistics},
 year = {1996}
+}
+
+@article{Jeffreys:1946jf,
+author = {Jeffreys, Harold},
+title = {{An Invariant Form for the Prior Probability in Estimation Problems}},
+journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+year = {1946}
+}
+
+@incollection{Shibata:1989tm,
+author = {Shibata, R},
+title = {{Statistical aspects of model selection}},
+booktitle = {From data to model},
+year = {1989}
 }
 
 @article{Chow:1981te,
@@ -987,7 +1034,7 @@ year = {1992}
 }
 
 @article{Fan:2008tf,
-author = {Fan, Y and Leslie, D.S. and Wand, M. P.},
+author = {Fan, Y. and Leslie, D.S. and Wand, M. P.},
 title = {{Generalised linear mixed model analysis via sequential Monte Carlo sampling}},
 journal = {Electronic Journal of Statistics},
 year = {2008}
@@ -1174,13 +1221,6 @@ journal = {Statistica Sinica},
 year = {1996}
 }
 
-@article{Berger:1987iq,
-author = {Berger, James O. and Delampady, Mohan},
-title = {{Testing precise hypotheses}},
-journal = {Statistical Science},
-year = {1987}
-}
-
 @article{Turkheimer:2003iy,
 author = {Turkheimer, Federico E. and Hinz, Rainer and Cunningham, Vincent J.},
 title = {{On the undecidability among kinetic models: From model selection to model averaging}},
@@ -1251,6 +1291,13 @@ journal = {Statistics and Computing},
 year = {1994}
 }
 
+@inproceedings{Andrieu:1999cc,
+author = {Andrieu, Christophe and De Freitas, N. and Doucet, Arnaud},
+title = {{Sequential MCMC for Bayesian model selection}},
+booktitle = {IEEE Signal Processing Workshop on Higher-Order Statistics},
+year = {1999}
+}
+
 @article{Hastie:1987dj,
 author = {Hastie, Trevor},
 title = {{A closer look at the deviance}},
@@ -1306,15 +1353,22 @@ title = {{Sequential Monte Carlo methods in filter theory}},
 year = {1998}
 }
 
+@incollection{Akaike:1973uc,
+author = {Akaike, Hirotugu},
+title = {{Information theory and an extension of the maximum likelihood principle}},
+booktitle = {Second international symposium on information theory},
+year = {1973}
+}
+
 @article{Hong:2004ja,
-author = {Hong, S and Bolic, M and Djuric, P M},
+author = {Hong, Sangjin and Boli{\'c}, Miodrag and Djuri{\'c}, Petar M.},
 title = {{An efficient fixed-point implementation of residual resampling scheme for high-speed particle filters}},
 journal = {IEEE Signal Processing Letters},
 year = {2004}
 }
 
 @article{Bolic:2004eu,
-author = {Bolic, Miodrag and Djuric, Petar M. and Hong, Sangjin},
+author = {Boli{\'c}, Miodrag and Djuri{\'c}, Petar M. and Hong, Sangjin},
 title = {{Resampling algorithms for particle filters: A computational complexity perspective}},
 journal = {EURASIP Journal on Advances in Signal Processing},
 year = {2004}
