--- a/thesis.bib
+++ b/thesis.bib
@@ -1374,3 +1374,13 @@ journal = {EURASIP Journal on Advances in Signal Processing},
 year = {2004}
 }
 
+@article{Zhou2013,
+    author = {Zhou, Yan and Aston, John A.D. and Johansen, Adam  M.},
+    title = {Bayesian model comparison for compartmental models with
+        applications in positron emission tomography},
+    journal = {Journal of Applied Statistics},
+    pages = {1-24},
+    year = {2013},
+}
+
+
