--- a/outline.tex
+++ b/outline.tex
@@ -1,8 +1,9 @@
-\documentclass[11pt, fontset = Minion]{marticle}
+\documentclass[11pt, bib, fontset = Minion]{marticle}
+\addbibresource{thesis.bib}
 
 \title{Sequential Monte Carlo for Bayesian Model Comparison}
 \author{Yan Zhou}
-\date{\today}
+\date{Estimated submission date: Sepetember 2013}
 \input{macros}
 
 \def\finish#1{(Estimated completion date: #1 2013)}
@@ -33,7 +34,7 @@ such approaches were previously difficult due to computational complexity.
 Further, we develop novel sequential Monte Carlo techniques for the purpose of
 Bayesian model comparison.
 
-\section{Model comparison \finish{May}}
+\section{Bayesian Model comparison \finish{April}}
 
 In this chapter various model comparison techniques were reviewed. First the
 approaches based on information criteria, such as \aic and \bic are reviewed
@@ -41,9 +42,14 @@ briefly. Though their limitations are well known, they are still widely used
 in many areas due to its computational simplicity. It is followed by a review
 of the Bayesian comparison methodology.
 
-\subsection{Information criteria based model selection \finish{April}}
+\subsection{Information criteria based model selection}
 
-\subsection{Bayesian model comparison \finish{May}}
+Though not directly related to Bayesian model comparison, however these
+methods are widely used in some applications, including one detailed in this
+thesis later. Therefore a brief review of some non-Bayesian methods are also
+reviewed in this section.
+
+\subsection{Bayesian model comparison}
 
 \section{Monte Carlo methods \finish{June}}
 
@@ -68,9 +74,9 @@ It is followed by a review of the sequential Monte Carlo literature. Some
 related methods, including those combining both \smc and \mcmc are also
 reviewed in this section.
 
-\subsection{Importance sampling \finish{April}}
+\subsection{Importance sampling}
 
-\subsection{Markov chain Monte Carlo \finish{May}}
+\subsection{Markov chain Monte Carlo}
 
 \subsubsection{Discrete time Markov chains}
 
@@ -80,7 +86,9 @@ reviewed in this section.
 
 \subsubsection{Reversible jump Markov chain Monte Carlo}
 
-\subsection{Sequential Monte Carlo \finish{June}}
+\subsubsection{Population \mcmc}
+
+\subsection{Sequential Monte Carlo}
 
 \subsubsection{Sequential importance sampling and resampling}
 
@@ -89,7 +97,7 @@ reviewed in this section.
 \subsubsection{Related methods}
 
 \section{Bayesian model comparison for Positron Emission Tomography
-  compartmental model \finish{July}}
+  compartmental model \finish{May}}
 
 Positron Emission Tomography (\pet) is widely used medical imaging technique
 in practice and research. It is often used for study human brains \emph{in
@@ -108,11 +116,13 @@ In the end of this chapter, some further issues are discussed, and motivate
 the work of the next chapter, where this problem is revisited with newly
 developed sequential Monte Carlo techniques.
 
-\subsection{A Bayesian approach \finish{July}}
+An earlier version of results of this work was published as \citet{Zhou2013}
 
-\subsection{Further issues \finish{May}}
+\subsection{A Bayesian approach}
 
-\section{Sequential Monte Carlo for Bayesian model comparison \finish{August}}
+\subsection{Further issues}
+
+\section{Sequential Monte Carlo for Bayesian model comparison \finish{July}}
 
 Sequential Monte Carlo methods are a family of algorithms that combines
 importance sampling and resampling to allows one to obtains samples from
@@ -136,24 +146,37 @@ are developed. During a research progress, a C++ library is developed for the
 purpose of parallel implementation of \smc algorithms. It is briefly discussed
 in the end of this chapter.
 
-\subsection{Methodology \finish{May}}
+\subsection{Methodology}
 
-\subsection{Path sampling with \smc samplers \finish{May}}
+\subsection{Path sampling with \smc samplers}
 
-\subsection{Extensions \finish{June}}
+\subsection{Extensions}
 
-\subsection{Relation with other methods \finish{July}}
+\subsection{Relation with other methods}
 
-\subsection{Illustrative examples \finish{July}}
+\section{vSMC: A C++ library for parallel implementation of \smc and
+  related algorithms \finish{July}}
 
-\subsubsection{Gaussian mixture model}
+A C++ library was developed along with the research. These development
+provided tools for implementing the illustrative examples in the next chapter.
+They are also tools for more general use. In this chapter, this software
+framework is introduced. It will be shown how general and some more
+specialized \smc samplers as well as some related algorithms can be
+implemented within this framework with little efforts.
 
-\subsubsection{Nonlinear ordinary differential systems}
+\section{Applications \finish{August}}
 
-\subsubsection{\pet compartmental model revisited}
+A few applications of the developed methods are detailed in this chapter. They
+include the classical mixture models as well as two realistic applications.
+Performance of the proposed methods are compared to other state-of-the-art
+algorithms. The \pet compartmental models are also revisited in this chapter,
+with a comparison of performance to the earlier development.
 
-\subsection{Implementation of sequential Monte Carlo algorithms
-  \finish{August}}
+\subsection{Gaussian mixture model}
+
+\subsection{Nonlinear ordinary differential systems}
+
+\subsection{\pet compartmental model revisited}
 
 \section{Conclusions \finish{September}}
 
@@ -162,5 +185,7 @@ in the end of this chapter.
 \subsection{Future research}
 
 \subsection{Summary}
+
+\printbibliography[heading=reference]
 
 \end{document}
