--- a/macros.tex
+++ b/macros.tex
@@ -38,7 +38,7 @@
 \def\hbth{\widehat{\bth}}
 \def\tbth{\widetilde{\bth}}
 
-\def\vec#1#2{#1_1,\dots,#1_{#2}}
+\def\lvec#1#2{#1_1,\dots,#1_{#2}}
 \def\svec#1#2{#1^1,\dots,#1^{#2}}
 \def\mcvec#1#2{#1^{(1)},\dots,#1^{(#2)}}
 
@@ -61,3 +61,4 @@
 \def\dd{,\diff}
 
 \def\note#1{\textcolor{MRed}{#1}}
+\def\comment#1{\textcolor{MGreen}{#1}}
